# cpp-concepts

./: .gitignore  CMakeLists.txt
concepts/: indexed_vector_is_lvalue.cpp
concepts/braced-initialization-return/: main.cpp  main.h
concepts/nodiscard/: main.cpp
concepts/odr-inline-vs-static-vs-namespace/: main.cpp  main.h  other.cpp
